--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <main>
     <div class="container">
       <div class="card">
-        <img class="picture" src="images/image-product-desktop.jpg" alt="This is an image of the perfume Gabrielle Essence Eau de Parfum">
-        <img  id="mobile-img" src="./images/image-product-mobile.jpg" alt="this is an image of the perfume Gabrielle Essence Eau de Parfum">
+        <img class="picture" src="./image-product-desktop.jpg" alt="This is an image of the perfume Gabrielle Essence Eau de Parfum">
+        <img  id="mobile-img" src="./image-product-mobile.jpg" alt="this is an image of the perfume Gabrielle Essence Eau de Parfum">
         <div class="especifications">
           <h3 class="product">
             Perfume
